--- a/src/shop.client.prj/Views/Pages/Home/ProductBasketItem.axaml
+++ b/src/shop.client.prj/Views/Pages/Home/ProductBasketItem.axaml
@@ -13,8 +13,8 @@
       Classes="container-product"
       Height="80">
         <Grid
-          ColumnDefinitions="auto,*,auto"
-          Margin="10,0">
+          Margin="10,0"
+          ColumnDefinitions="auto,*,auto">
             <Image
               Grid.Column="0"
               Width="70"
@@ -25,10 +25,10 @@
             <Grid
               Grid.Column="1"
               Margin="10,0"
-              RowDefinitions="auto,auto"
-              VerticalAlignment="Center">
+              VerticalAlignment="Center"
+              RowDefinitions="auto,auto">
                 <TextBlock
-                  Classes="default"
+                  Classes="default" Classes.dark="true"
                   Grid.Row="0"
                   Height="42"
                   Margin="0,0,0,0"
@@ -37,10 +37,11 @@
                   TextTrimming="CharacterEllipsis" TextWrapping="Wrap" />
                 <Grid
                   Grid.Row="1"
-                  VerticalAlignment="Bottom"
                   Margin="0,-8,0,0"
+                  VerticalAlignment="Bottom"
                   ColumnDefinitions="auto,*">
                     <TextBlock
+                      Classes.dark="true"
                       Classes.price-with-sale="{Binding PriceBeforeSale, Converter={x:Static ObjectConverters.IsNotNull}}"
                       Classes.price-without-sale="{Binding PriceBeforeSale, Converter={x:Static ObjectConverters.IsNull}}"
                       Grid.Column="0">
@@ -68,10 +69,10 @@
               Grid.Column="2"
               Margin="0,0,0,0"
               HorizontalAlignment="Stretch" VerticalAlignment="Center"
-                  AddCommand="{Binding AddCommand}"
-                  RemoveCommand="{Binding RemoveCommand}"
+              AddCommand="{Binding AddCommand}"
               Count="{Binding CurrentSelectedCount, Mode=TwoWay}"
-              MaxCount="{Binding CurrentCount}" />
+              MaxCount="{Binding CurrentCount}"
+              RemoveCommand="{Binding RemoveCommand}" />
         </Grid>
     </Border>
 </UserControl>
