--- a/src/shop.client.wpf.desktop.prj/App.xaml
+++ b/src/shop.client.wpf.desktop.prj/App.xaml
@@ -1,13 +1,14 @@
 ﻿<Application
-  xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-  xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-  xmlns:local="clr-namespace:Shop.Client.WPF.Desktop"
-  x:Class="Shop.Client.WPF.Desktop.App">
+    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:local="clr-namespace:Shop.Client.WPF.Desktop"
+    x:Class="Shop.Client.WPF.Desktop.App">
 
     <Application.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
-                <ResourceDictionary Source="pack://application:,,,/shop.ui.wpf;component/Styles/Styles.xaml" />
+                <ResourceDictionary
+                    Source="pack://application:,,,/shop.ui.wpf;component/Styles/Styles.xaml" />
             </ResourceDictionary.MergedDictionaries>
         </ResourceDictionary>
     </Application.Resources>
