--- a/src/shop.client.wpf.desktop.prj/Views/Menu/MenuView.xaml
+++ b/src/shop.client.wpf.desktop.prj/Views/Menu/MenuView.xaml
@@ -1,12 +1,92 @@
-﻿<UserControl x:Class="Shop.Client.WPF.Desktop.Views.Menu.MenuView"
-             xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-             xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             xmlns:local="clr-namespace:Shop.Client.WPF.Desktop.Views.Menu"
-             mc:Ignorable="d" 
-             d:DesignHeight="450" d:DesignWidth="800">
-    <Grid>
-            
-    </Grid>
+﻿<UserControl
+    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:controls="clr-namespace:Shop.UI.WPF.Controls;assembly=shop.ui.wpf" xmlns:converters="clr-namespace:Shop.UI.WPF.Converters;assembly=shop.ui.wpf"
+    xmlns:d="http://schemas.microsoft.com/expression/blend/2008" xmlns:local="clr-namespace:Shop.Client.WPF.Desktop.Views.Menu"
+    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" xmlns:sys="clr-namespace:System;assembly=mscorlib"
+    d:DesignHeight="450" d:DesignWidth="250"
+    mc:Ignorable="d"
+    x:Class="Shop.Client.WPF.Desktop.Views.Menu.MenuView">
+
+    <UserControl.Resources>
+
+        <converters:InverseBooleanConverter
+            x:Key="InverseBooleanConverter" />
+
+        <converters:SwitchConverter
+            x:Key="OpenIconConverter"
+            Default="{StaticResource RightArrowIcon}">
+            <converters:SwitchConverter.Cases>
+                <converters:Case
+                    Value="{StaticResource RightArrowIcon}">
+                    <converters:Case.Key>
+                        <sys:Boolean>False</sys:Boolean>
+                    </converters:Case.Key>
+                </converters:Case>
+                <converters:Case
+                    Value="{StaticResource LeftArrowIcon}">
+                    <converters:Case.Key>
+                        <sys:Boolean>True</sys:Boolean>
+                    </converters:Case.Key>
+                </converters:Case>
+            </converters:SwitchConverter.Cases>
+        </converters:SwitchConverter>
+
+    </UserControl.Resources>
+
+    <Border
+        Style="{StaticResource container}">
+        <Grid>
+            <Grid.RowDefinitions>
+                <RowDefinition
+                    Height="*" />
+                <RowDefinition
+                    Height="auto" />
+            </Grid.RowDefinitions>
+
+            <StackPanel
+                Grid.Row="0"
+                Margin="10,0"
+                Orientation="Vertical">
+                <controls:ButtonIcon
+                    Margin="0,8"
+                    Command="{Binding Commands.OpenHide}"
+                    IconContent="{Binding IsOpened, Converter={StaticResource OpenIconConverter}}"
+                    IsShortSizeStyle="{Binding IsOpened, Converter={StaticResource InverseBooleanConverter}}"
+                    TextButton="Open/Hide" />
+
+                <ItemsControl
+                    Name="MenuButtonsContainer"
+                    ItemsSource="{Binding MenuData.MenuItems}"
+                    ScrollViewer.HorizontalScrollBarVisibility="Disabled" ScrollViewer.VerticalScrollBarVisibility="Disabled">
+                    <ItemsControl.ItemsPanel>
+                        <ItemsPanelTemplate>
+                            <StackPanel
+                                Orientation="Vertical" />
+                        </ItemsPanelTemplate>
+                    </ItemsControl.ItemsPanel>
+                    <ItemsControl.ItemTemplate>
+                        <DataTemplate>
+                            <controls:ButtonIcon
+                                Margin="0,0,0,8"
+                                IsSelected="{Binding IsSelected}"
+                                Command="{Binding Command}"
+                                IconContent="{Binding DisplayName, Converter={StaticResource IconConverter}}"
+                                IsShortSizeStyle="{Binding DataContext.IsOpened, RelativeSource={RelativeSource AncestorType=ItemsControl}, Converter={StaticResource InverseBooleanConverter}}"
+                                TextButton="{Binding DisplayName}" /> 
+                        </DataTemplate>
+                    </ItemsControl.ItemTemplate>
+                </ItemsControl>
+            </StackPanel>
+            <controls:ButtonIcon
+                Grid.Row="1"
+                Margin="10,8"
+                Command="{Binding Commands.CloseApp}"
+                CommandParameter="{Binding RelativeSource={RelativeSource AncestorType=Window}}"
+                IconContent="{StaticResource OffIcon}"
+                IsRed="True"
+                IsShortSizeStyle="{Binding IsOpened, Converter={StaticResource InverseBooleanConverter}}"
+                TextButton="CloseProgram" />
+        </Grid>
+    </Border>
 </UserControl>
