--- a/src/shop.client.wpf.desktop.prj/Views/Pages/Home/ProductItem.xaml
+++ b/src/shop.client.wpf.desktop.prj/Views/Pages/Home/ProductItem.xaml
@@ -1,10 +1,125 @@
 ﻿<UserControl
-  xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-  xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-  xmlns:d="http://schemas.microsoft.com/expression/blend/2008" xmlns:local="clr-namespace:Shop.Client.WPF.Desktop.Views.Pages"
-  xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-  d:DesignHeight="450" d:DesignWidth="800"
-  mc:Ignorable="d"
-  x:Class="Shop.Client.WPF.Desktop.Views.Pages.ProductItem">
-  <Grid />
+    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:controls="clr-namespace:Shop.UI.WPF.Controls;assembly=shop.ui.wpf" xmlns:converters="clr-namespace:Shop.UI.WPF.Converters;assembly=shop.ui.wpf"
+    xmlns:d="http://schemas.microsoft.com/expression/blend/2008" xmlns:local="clr-namespace:Shop.Client.WPF.Desktop.Views.Pages"
+    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" xmlns:ui="clr-namespace:Shop.UI.WPF;assembly=shop.ui.wpf"
+    d:DesignHeight="450" d:DesignWidth="800"
+    mc:Ignorable="d"
+    x:Class="Shop.Client.WPF.Desktop.Views.Pages.ProductItem">
+
+    <UserControl.Resources>
+
+        <converters:IsNotNullOrEmptyObjectToVisibilityConverter
+            x:Key="IsNotNullOrEmptyObjectToVisibilityConverter" />
+
+        <converters:IsNullOrEmptyObjectToVisibilityConverter
+            x:Key="IsNullOrEmptyObjectToVisibilityConverter" />
+        
+        <converters:IsNotNullOrEmptyObjectConverter
+            x:Key="IsNotNullOrEmptyObjectConverter" />
+  
+    </UserControl.Resources>
+
+    <Border
+        Width="208" Height="329"
+        Style="{StaticResource container-product}">
+        <Grid
+            Margin="0,16,0,0">
+            <Grid.RowDefinitions>
+                <RowDefinition
+                    Height="Auto" />
+                <RowDefinition
+                    Height="Auto" />
+            </Grid.RowDefinitions>
+
+            <Image
+                Grid.Row="0"
+                Width="190" Height="147"
+                HorizontalAlignment="Center"
+                Source="{Binding Image}"
+                Stretch="Fill" />
+
+            <Grid
+                Grid.Row="1"
+                Margin="10,0">
+                <Grid.RowDefinitions>
+                    <RowDefinition
+                        Height="auto" />
+                    <RowDefinition
+                        Height="auto" />
+                    <RowDefinition
+                        Height="auto" />
+                    <RowDefinition
+                        Height="auto" />
+                </Grid.RowDefinitions>
+                <Grid
+                    Grid.Row="0"
+                    VerticalAlignment="Bottom">
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition
+                            Width="Auto" />
+                        <ColumnDefinition
+                            Width="*" />
+                    </Grid.ColumnDefinitions>
+                    <TextBlock
+                        Grid.Column="0"
+                        Style="{StaticResource textblock-price-without-sale}"
+                        Visibility="{Binding PriceBeforeSale, Converter={StaticResource IsNullOrEmptyObjectToVisibilityConverter}}">
+                        <Run
+                            Text="{Binding Price, TargetNullValue=0, Mode=OneWay}" />
+                        <Run
+                            Text="₽" />
+                    </TextBlock>
+                    <TextBlock
+                        Grid.Column="0"
+                        Style="{StaticResource textblock-price-with-sale}"
+                        Visibility="{Binding PriceBeforeSale, Converter={StaticResource IsNotNullOrEmptyObjectToVisibilityConverter}}">
+                        <Run
+                            Text="{Binding Price, TargetNullValue=0, Mode=OneWay}" />
+                        <Run
+                            Text="₽" />
+                    </TextBlock>
+                    <TextBlock
+                        Grid.Column="1"
+                        Margin="-4,1,0,0"
+                        Style="{StaticResource textblock-sale}"
+                        Visibility="{Binding PriceBeforeSale, Converter={StaticResource IsNotNullOrEmptyObjectToVisibilityConverter}}">
+                        <Run
+                            Text="{Binding PriceBeforeSale, TargetNullValue=0, Mode=OneWay}"
+                            TextDecorations="Strikethrough" />
+                        <Run
+                            Text="₽"
+                            TextDecorations="Strikethrough" />
+                    </TextBlock>
+                </Grid>
+                <TextBlock
+                    Grid.Row="1"
+                    Height="42"
+                    Margin="0,-2,0,0"
+                    VerticalAlignment="Top"
+                    Text="{Binding ProductName}"
+                    Style="{StaticResource textblock-default-dark}"
+                    TextTrimming="CharacterEllipsis" TextWrapping="Wrap" />
+                <TextBlock
+                    Grid.Row="2"
+                    Margin="0,-4,0,0"
+                    Style="{StaticResource textblock-default-dark}">
+                    <Run
+                        Text="{Binding Weight, TargetNullValue=0, Mode=OneWay}" />
+                    <Run
+                        Text="г" />
+                </TextBlock>
+
+                <controls:AddRemoveButton
+                    Grid.Row="3"
+                    Margin="0,10,0,0"
+                    HorizontalAlignment="Stretch"
+                    AddCommand="{Binding AddCommand}"
+                    Count="{Binding CurrentSelectedCount, Mode=TwoWay}"
+                    MaxCount="{Binding CurrentCount}"
+                    RemoveCommand="{Binding RemoveCommand}" />
+            </Grid>
+        </Grid>
+    </Border>
 </UserControl>
