--- a/src/shop.client.wpf.desktop.prj/Views/Pages/PageView.xaml
+++ b/src/shop.client.wpf.desktop.prj/Views/Pages/PageView.xaml
@@ -1,12 +1,43 @@
-﻿<UserControl x:Class="Shop.Client.WPF.Desktop.Views.Pages.PageView"
-             xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-             xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             xmlns:local="clr-namespace:Shop.Client.WPF.Desktop.Views.Pages"
-             mc:Ignorable="d" 
-             d:DesignHeight="450" d:DesignWidth="800">
+﻿<UserControl
+    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:converters="clr-namespace:Shop.UI.WPF.Converters;assembly=shop.ui.wpf" xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+    xmlns:local="clr-namespace:Shop.Client.WPF.Desktop.Views.Pages" xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    d:DesignHeight="450" d:DesignWidth="800"
+    mc:Ignorable="d"
+    x:Class="Shop.Client.WPF.Desktop.Views.Pages.PageView">
+
+    <UserControl.Resources>
+
+        <converters:StringAllSymbolsToUpperConverter
+            x:Key="StringAllSymbolsToUpperConverter" />
+    </UserControl.Resources>
+
     <Grid>
-            
+        <Grid.RowDefinitions>
+            <RowDefinition
+                Height="auto" />
+            <RowDefinition
+                Height="*" />
+        </Grid.RowDefinitions>
+
+        <Border
+            Grid.Row="0"
+            Height="50"
+            Style="{StaticResource container}">
+            <TextBlock
+                Margin="12,0"
+                Style="{StaticResource textblock-default}"
+                Text="{Binding PageHeader, Converter={StaticResource StringAllSymbolsToUpperConverter}}"
+                FontSize="{DynamicResource LargeFontSize}"
+                FontWeight="SemiBold" Foreground="#fff" />
+        </Border>
+        <Border
+            Grid.Row="1"
+            Margin="8,0,8,8"
+            Style="{StaticResource container}">
+            <ContentPresenter
+                Content="{Binding View}"  />
+        </Border>
     </Grid>
 </UserControl>
