--- a/src/shop.ui.wpf.prj/Styles/Resources.xaml
+++ b/src/shop.ui.wpf.prj/Styles/Resources.xaml
@@ -1,12 +1,28 @@
-﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-                    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-              xmlns:sys="clr-namespace:System;assembly=mscorlib">
+﻿<ResourceDictionary
+    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:sys="clr-namespace:System;assembly=mscorlib">
     <FontFamily x:Key="DefaultFont">Segoe UI</FontFamily>
 
-    <sys:Double x:Key="FontSize">12</sys:Double>
-    <sys:Double x:Key="SmallFontSize">10</sys:Double>
-    <sys:Double x:Key="MediumFontSize">14</sys:Double>
-    <sys:Double x:Key="LargeFontSize">16</sys:Double>
+    <sys:Double
+        x:Key="FontSize">
+        12
+    </sys:Double>
+    <sys:Double
+        x:Key="SmallFontSize">
+        10
+    </sys:Double>
+    <sys:Double
+        x:Key="MediumFontSize">
+        14
+    </sys:Double>
+    <sys:Double
+        x:Key="LargeFontSize">
+        16
+    </sys:Double>
 
-    <CornerRadius x:Key="ButtonCornerRadius">16</CornerRadius>
+    <CornerRadius
+        x:Key="ButtonCornerRadius">
+        16
+    </CornerRadius>
 </ResourceDictionary>
