--- a/src/shop.ui.wpf.prj/Styles/Window.xaml
+++ b/src/shop.ui.wpf.prj/Styles/Window.xaml
@@ -1,15 +1,15 @@
 ﻿<ResourceDictionary
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
-  
+
     <Style x:Key="NoChrome" TargetType="Window">
-        <Setter Property="Background" Value="{DynamicResource DarkSmooth}" />
-        <Setter Property="AllowsTransparency" Value="True" /> 
-        <Setter Property="Padding" Value="0" />
+        <Setter Property="AllowsTransparency" Value="True" />
+        <Setter Property="Background" Value="{DynamicResource DarkSmooth}" /> 
         <Setter Property="WindowStyle" Value="None" />
     </Style>
 
-    <Style x:Key="MaximizedWindow" TargetType="Window">
+    <Style x:Key="MaximizedWindow" BasedOn="{StaticResource NoChrome}" TargetType="Window">
+        <Setter Property="WindowState" Value="Maximized"/>
         <Setter Property="Padding" Value="8" />
     </Style>
 
